testsuite/tests/typecheck/should_fail/T7869.hs
module T7869 where

f = (\x -> f x) :: [a] -> b
